# nova-internal-tools

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yaml  deploy-choral-rss-bot.yaml  deploy-gcp-alert-discord-bot.yaml  deploy-notion-discord-bot.yaml  terraform-apply.yaml  terraform-plan.yaml
choral_rss_bot/: .env.example  .gitignore  Dockerfile  Dockerfile.web_scraper  README.md  agent_engine_agent.py  cloudbuild.web_scraper.yaml  cloudbuild.yaml  config.yaml  deploy.sh  deploy_agent_engine.py  deploy_scraper.sh  job.yaml  llm_helper.py  main.py  pyproject.toml  scraper_api.py  scraper_api_tools.py  storage.py  web_scraper_agent.py  web_scraper_main.py  web_scraper_tools.py
choral_rss_bot/common/: __init__.py  discord.py  storage.py
choral_rss_bot/deploy/: Dockerfile  Dockerfile.web_scraper  cloudbuild.web_scraper.yaml  cloudbuild.yaml  deploy.sh  deploy_agent_engine.py  deploy_scraper.sh  job.yaml
choral_rss_bot/docs/: scraper_redesign.md
choral_rss_bot/rss/: __init__.py  llm_helper.py  main.py
choral_rss_bot/scraper/: __init__.py  agent.py  api.py  api_tools.py  config.yaml  llm_helper.py  main.py  tools.py
choral_rss_bot/tests/: test_discord.py  test_rss_main.py  test_storage.py
gcp_alert_discord_bot/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
gcp_alert_discord_bot/app/: main.py
gcp_alert_discord_bot/common/: discord_sender.py  formatter.py
gcp_alert_discord_bot/deploy/: Dockerfile  cloudbuild.yaml
gcp_alert_discord_bot/terraform/: main.tf  outputs.tf  variables.tf
gcp_alert_discord_bot/tests/: test_app.py  test_discord_sender.py  test_formatter.py
infra/: .gitignore
infra/gcp_alert_discord_bot/: main.tf  outputs.tf  versions.tf
infra/github_wif/: main.tf  outputs.tf  versions.tf
infra/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
infra/modules/github_deployer_sa/: main.tf  outputs.tf  variables.tf
infra/notion_discord_bot/: README.md  main.tf  outputs.tf  variables.tf
notion_discord_bot/: .env.example  .gitignore  CLAUDE.md  README.md  architecture.md  pyproject.toml
notion_discord_bot/common/: discord_format.py  discord_sender.py  notion_client.py  signature.py  task_enqueuer.py
notion_discord_bot/deploy/: .dockerignore  Dockerfile  cloudbuild.yaml
notion_discord_bot/ingress/: main.py
notion_discord_bot/receiver/: main.py  notion_client.py  publisher.py
notion_discord_bot/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
notion_discord_bot/tests/: test_discord_format.py  test_discord_sender.py  test_ingress.py  test_signature.py  test_task_enqueuer.py  test_worker.py
notion_discord_bot/worker/: main.py
